--- a/my-fitnes-planner-app/src/app/modules/training/components/training-form/training-form.component.html
+++ b/my-fitnes-planner-app/src/app/modules/training/components/training-form/training-form.component.html
@@ -35,7 +35,7 @@
           *ngIf="
             (getFormControl('typeOfTraining')?.invalid &&
               getFormControl('typeOfTraining')?.touched) ||
-            changedNumberExercises
+            emptyTypeOfTraining
           "
           class="alert alert-danger"
         >
