--- a/my-fitnes-planner-app/src/app/modules/training/components/training/training.component.html
+++ b/my-fitnes-planner-app/src/app/modules/training/components/training/training.component.html
@@ -1,12 +1,30 @@
 <!-- <div class="col-md-12"> -->
-<div class="row">
-  <div class="col-md-4">
-    <app-training-form></app-training-form>
+<div class="training-wrapper">
+  <div class="col-md-12">
+    <button class="btn btn-primary" (click)="open(mymodalcontent, false)">
+      Novi trening
+    </button>
   </div>
-  <div class="col-md-8">
+  <div class="col-md-12">
     <app-training-list
       (editTrainingEvent)="editTraining($event)"
     ></app-training-list>
   </div>
+  <!-- NG TEMPLATE WHICH WILL BE PASSED AS PARAM TO NG MODAL  -->
+  <ng-template #mymodalcontent let-modal>
+    <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">{{ title }}</h4>
+      <button
+        type="button"
+        class="close"
+        aria-label="Close"
+        (click)="modal.dismiss('Cross click')"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-body">
+      <app-training-form (save)="modal.close('Save click')"></app-training-form>
+    </div>
+  </ng-template>
 </div>
-<!-- </div> -->
