--- a/my-fitnes-planner-app/src/app/modules/training/components/training/training.component.html
+++ b/my-fitnes-planner-app/src/app/modules/training/components/training/training.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="col-md-12"> -->
 <div class="training-wrapper">
-  <div class="col-md-12">
+  <div class="col-md-12 my-button-wrapper">
     <button class="btn btn-primary" (click)="open(mymodalcontent, false)">
       Novi trening
     </button>
