--- a/my-fitnes-planner-app/src/app/modules/shared/components/header/header.component.html
+++ b/my-fitnes-planner-app/src/app/modules/shared/components/header/header.component.html
@@ -55,7 +55,13 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button
+          class="btn btn-outline-success"
+          type="button"
+          (click)="showMessage()"
+        >
+          Search
+        </button>
       </form>
     </div>
   </div>
