--- a/my-fitnes-planner-app/src/styles.scss
+++ b/my-fitnes-planner-app/src/styles.scss
@@ -190,11 +190,11 @@ th[appNgbSortableTable].desc:after {
   cursor: pointer; /* Add a pointer on hover */
   display: block;
 }
-.show {
+.showSpinner {
   opacity: 1;
   visibility: unhidden;
 }
-.hide {
+.hideSpinner {
   opacity: 0;
   visibility: hidden;
 }
@@ -212,6 +212,52 @@ th[appNgbSortableTable].desc:after {
   .text {
     color: blue;
   }
+}
+/*******************************toastr *****************************/
+.toast-wrapper {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  border: 2px solid black;
+  background-color: white;
+  width: 16rem;
+  border-radius: 1.1rem;
+  .header {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem 0.75rem;
+    color: #6c757d;
+    background-clip: padding-box;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    border-top-left-radius: calc(0.25rem - 1px);
+    border-top-right-radius: calc(0.25rem - 1px);
+    justify-content: space-between;
+  }
+  .handler {
+    border-radius: 1rem;
+  }
+  .body {
+    padding: 0.75rem;
+    word-wrap: break-word;
+  }
+  .success {
+    background-color: chartreuse;
+  }
+  .warning {
+    background-color: orange;
+  }
+  .error {
+    background-color: red;
+  }
+  .toast-header {
+    justify-content: space-between;
+  }
+}
+
+.toast-wrapper .handler:not(.show) {
+  // If there is not .show class toast wont be showed
+  display: none;
 }
 /******************************************** App layout *****************/
 .entire-wrapper {
@@ -232,12 +278,17 @@ th[appNgbSortableTable].desc:after {
   background-attachment: fixed;
   background-size: cover;
   height: 100%;
+  padding: 0.5rem;
+  .my-button-wrapper {
+    padding: 1rem 0;
+  }
 }
 .my-table table > :not(caption) > * > * {
   border-bottom: 0;
 }
 .training-list-wrapper {
   background-color: burlywood;
+  min-height: 15rem;
 }
 .training-form-wrapper {
 }
@@ -278,7 +329,8 @@ th[appNgbSortableTable].desc:after {
 .main-content {
   height: 80%;
   overflow-y: scroll;
-  background-color: goldenrod;
+  background-color: white;
+  padding: 8px;
 }
 
 .home-page-wrapper {
