--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -12,6 +11,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
@@ -19,6 +19,9 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/training">Training</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/nutrition">Nutrition</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -48,21 +51,37 @@
           >
         </li>
       </ul>
-      <form class="d-flex">
-        <input
-          class="form-control me-2"
-          type="search"
-          placeholder="Search"
-          aria-label="Search"
-        />
-        <button
-          class="btn btn-outline-success"
-          type="button"
-          (click)="showMessage()"
-        >
-          Search
-        </button>
-      </form>
+      <div class="user-searchbox">
+        <div class="userbox" *ngIf="isLoggedUser">
+          <span class="name">{{ loggedUserFirstName }}</span>
+          <div class="dropdown">
+            <button type="button" class="remove-btn" data-toggle="dropdown">
+              <i class="far fa-user-circle"></i>
+            </button>
+            <div class="dropdown-content">
+              <a class="dropdown-item" (click)="logout()">
+                <i class="fa fa-home"></i> LOGOUT
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <form class="d-flex">
+          <input
+            class="form-control me-2"
+            type="search"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-success"
+            type="button"
+            (click)="showMessage()"
+          >
+            Search
+          </button>
+        </form>
+      </div>
     </div>
   </div>
 </nav>
