--- a/src/app/modules/shared/components/login/login.component.html
+++ b/src/app/modules/shared/components/login/login.component.html
@@ -1,43 +1,43 @@
-<div class="login-wrapper">
-  <form action="action_page.php" style="border: 1px solid #ccc">
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr />
+<form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
+  <div class="form-group">
+    <label for="inputEmail">Email</label>
+    <input
+      type="email"
+      class="form-control"
+      id="inputEmail"
+      formControlName="email"
+      aria-describedby="emailHelp"
+      placeholder="Unesi email"
+      required
+    />
+  </div>
+  <div class="form-group">
+    <label for="inputPassword">Sifra</label>
+    <input
+      type="password"
+      class="form-control"
+      formControlName="password"
+      id="inputPassword"
+      placeholder="Sifra"
+      required
+    />
+  </div>
+  <label>
+    <input
+      type="checkbox"
+      checked="checked"
+      name="remember"
+      style="margin-bottom: 15px"
+    />
+    Remember me
+  </label>
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required />
+  <p>
+    By creating an account you agree to our
+    <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
+  </p>
 
-      <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required />
-
-      <label for="psw-repeat"><b>Repeat Password</b></label>
-      <input
-        type="password"
-        placeholder="Repeat Password"
-        name="psw-repeat"
-        required
-      />
-
-      <label>
-        <input
-          type="checkbox"
-          checked="checked"
-          name="remember"
-          style="margin-bottom: 15px"
-        />
-        Remember me
-      </label>
-
-      <p>
-        By creating an account you agree to our
-        <a href="#" style="color: dodgerblue">Terms & Privacy</a>.
-      </p>
-
-      <div class="clearfix">
-        <button type="button" class="cancelbtn">Cancel</button>
-        <button type="submit" class="signupbtn">Sign Up</button>
-      </div>
-    </div>
-  </form>
-</div>
+  <div class="clearfix">
+    <button type="submit" class="btn btn-primary">Sign in</button>
+  </div>
+</form>
