Finished crud for training, minor css layout changes, setup firebase deployment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,17 +28,16 @@
     </div>
   </div>
   <!-- END -->
-  <!--  TODO: Resolve in line css -->
-  <div class="container-lg app-wrapper">
+  <div class="container-lg app-wrapper g-0">
     <!-- Header -->
-    <div class="row header-wrapper">
-      <div class="col-md-12 g-0">
+    <div class="row header-wrapper bg-dark">
+      <div class="col-md-12 column">
         <app-header></app-header>
       </div>
     </div>
     <!-- Main content -->
     <div class="row main-content">
-      <div class="col-md-12" style="padding: 0">
+      <div class="col-md-12">
         <router-outlet> </router-outlet>
       </div>
     </div>
