--- a/src/app/modules/training/components/training/training.component.html
+++ b/src/app/modules/training/components/training/training.component.html
@@ -2,7 +2,7 @@
 <div class="training-wrapper">
   <div class="col-md-12 my-button-wrapper">
     <button class="btn btn-primary" (click)="open(mymodalcontent, false)">
-      Novi trening
+      New training
     </button>
   </div>
   <div class="col-md-12">
