--- a/src/app/modules/training/components/training-form/training-form.component.html
+++ b/src/app/modules/training/components/training-form/training-form.component.html
@@ -15,6 +15,9 @@
       <div class="form-group col-md-6 date-padding">
         <ngb-datepicker #dp formControlName="trainingDate"></ngb-datepicker>
       </div>
+      <!-- <div class="form-group col-md-6 date-padding">
+        <ngb-datepicker formControlName="updatedAt"></ngb-datepicker>
+      </div> -->
       <div class="form-group col-md-6">
         <label for="inputType" class="form-label">Tip treninga</label>
         <select
