--- a/src/app/modules/training/components/training-list/training-list.component.html
+++ b/src/app/modules/training/components/training-list/training-list.component.html
@@ -23,6 +23,7 @@
     <table class="my-table table table-striped" data-search="true">
       <thead>
         <tr>
+          <th class="id-table" data-field="isActive">Is Active</th>
           <th
             class="id-table"
             data-field="state"
@@ -37,22 +38,32 @@
             sortable="trainingDate"
             (sort)="onSort($event)"
           >
-            Datum
+            Date
           </th>
           <th
             appNgbSortableTable
             sortable="typeOfTraining"
             (sort)="onSort($event)"
           >
-            Tip
+            Type
           </th>
           <th></th>
-          <th>Akcija</th>
+          <th>Action</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let training of trainings$ | async">
           <!-- trackBy: trackTraining -->
+          <td>
+            <input
+              class="form-check-input"
+              type="checkbox"
+              unchecked=""
+              [checked]="training.isActive"
+              id="flexCheckChecked"
+              disabled
+            />
+          </td>
           <td>{{ training.id }}</td>
           <td>{{ training.trainingDate }}</td>
           <td>{{ training.typeOfTraining }}</td>
@@ -62,7 +73,7 @@
                 <table class="table mb-0">
                   <thead>
                     <tr>
-                      <th>Vezba</th>
+                      <th>Exercise</th>
                       <th></th>
                     </tr>
                   </thead>
@@ -73,9 +84,9 @@
                         <table class="table mb-0">
                           <thead>
                             <tr>
-                              <th>Serija#</th>
-                              <th>Broj ponavljanja</th>
-                              <th>Kilaza [kg]</th>
+                              <th>Serie#</th>
+                              <th>Reps Number</th>
+                              <th>Weight [kg]</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -99,13 +110,24 @@
             </tr>
           </td>
           <td>
-            <button
-              type="button"
-              class="btn btn-primary"
-              (click)="editTraining(training)"
-            >
-              Edit
-            </button>
+            <div class="my-button-wrapper">
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="editTraining(training)"
+              >
+                Edit
+              </button>
+            </div>
+            <div class="my-button-wrapper">
+              <button
+                type="button"
+                class="btn btn-primary"
+                (click)="deleteTraining(modalcontent, training)"
+              >
+                Delete
+              </button>
+            </div>
           </td>
         </tr>
       </tbody>
@@ -131,3 +153,32 @@
     </div>
   </div>
 </div>
+<ng-template #modalcontent let-modal>
+  <div class="modal-header">
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    ></button>
+  </div>
+  <div class="modal-body">
+    <h4 class="modal-question" id="modal-question">Confirm delete?</h4>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-outline-dark"
+      (click)="modal.close('Confirm click')"
+    >
+      Confirm
+    </button>
+    <button
+      type="button"
+      class="btn btn-outline-dark"
+      (click)="modal.dismiss('Cancel click')"
+    >
+      Cancel
+    </button>
+  </div>
+</ng-template>
