Corected interceptor,done login and signup with actions. Next is adding effects and deleting servis for auth

--- a/src/app/modules/training/components/training-form/training-form.component.html
+++ b/src/app/modules/training/components/training-form/training-form.component.html
@@ -203,12 +203,7 @@
       </div>
     </div>
     <div class="col-md-2 btn-wrapper">
-      <button
-        mat-button
-        class="my-button btn-terrnary"
-        type="submit"
-        [disabled]="form.valid"
-      >
+      <button mat-button class="my-button btn-terrnary" type="submit">
         Sacuvaj
       </button>
     </div>
