NGRX app state management improved,auth effects. Finishing Login effects is next task

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="entire-wrapper bg-responsive">
   <!-- User Account wrapper -->
-  <div class="account-display-wrapper" *ngIf="!isLoggedUser">
+  <div class="account-display-wrapper" *ngIf="!isAuthenticated">
     <button type="button" routerLink="/login" class="btn btn-primary padd">
       login
     </button>
