--- a/src/app/modules/shared/components/login/login.component.html
+++ b/src/app/modules/shared/components/login/login.component.html
@@ -8,6 +8,7 @@
       formControlName="email"
       aria-describedby="emailHelp"
       placeholder="Unesi email"
+      readonly
       required
     />
   </div>
@@ -19,6 +20,7 @@
       formControlName="password"
       id="inputPassword"
       placeholder="Sifra"
+      readonly
       required
     />
   </div>
