--- a/src/app/modules/shared/components/register/register.component.html
+++ b/src/app/modules/shared/components/register/register.component.html
@@ -71,12 +71,6 @@
     > -->
   </div>
   <div class="clearfix">
-    <button
-      type="submit"
-      class="btn btn-primary"
-      [disabled]="registerForm.invalid"
-    >
-      Sign up
-    </button>
+    <button type="submit" class="btn btn-primary" disabled>Sign up</button>
   </div>
 </form>
